--- a/app/home.html
+++ b/app/home.html
@@ -36,11 +36,11 @@
 			<!--轮播图-->
 		<div class="swiper-container common">
 			<div class="swiper-wrapper">
-				<div class="swiper-slide"><a href="#"><img src="static/images/index/banner01.jpg" style="width: 100%; height: 550px; margin-top: -1px; /"></a></div>
-				<div class="swiper-slide"><a href="#"><img src="static/images/index/banner02.jpg" style="width: 100%; height: 550px; margin-top: -1px; /"></a></div>
-				<div class="swiper-slide"><a href="#"><img src="static/images/index/banner03.jpg" style="width: 100%; height: 550px; margin-top: -1px; /"></a></div>
-				<div class="swiper-slide"><a href="#"><img src="static/images/index/banner04.jpg" style="width: 100%; height: 550px; margin-top: -1px; /"></a></div>
-				<div class="swiper-slide"><a href="#"><img src="static/images/index/banner05.jpg" style="width: 100%; height: 550px; margin-top: -1px; /"></a></div>
+				<div class="swiper-slide"><a href="#"><img src="static/images/index/banner01.jpg" style="width: 100%; height: 550px; margin-top: -1px;" /></a></div>
+				<div class="swiper-slide"><a href="#"><img src="static/images/index/banner02.jpg" style="width: 100%; height: 550px; margin-top: -1px;" /></a></div>
+				<div class="swiper-slide"><a href="#"><img src="static/images/index/banner03.jpg" style="width: 100%; height: 550px; margin-top: -1px;" /></a></div>
+				<div class="swiper-slide"><a href="#"><img src="static/images/index/banner04.jpg" style="width: 100%; height: 550px; margin-top: -1px;" /></a></div>
+				<div class="swiper-slide"><a href="#"><img src="static/images/index/banner05.jpg" style="width: 100%; height: 550px; margin-top: -1px;" /></a></div>
 				<div class="swiper-pagination"></div>
 				<div class="swiper-scrollbar"></div>
 				<script language="javascript"> 
@@ -306,9 +306,9 @@
 								<a href="#"><img src="static/images/index/list02.png" /></a>
 								<p>Z3全面屏 6GB + 128GB-极光蓝</p>
 								<ul>
-									<a href="#"></a>
-									<a href="#"></a>
-									<a href="#"></a
+									<a href="#" style="background: #0f243e;"></a>
+									<a href="#" style="background: #e5b9b7;"></a>
+									<a href="#" style="background: #0c0c0c;"></a
 								</ul>
 								<p>￥2198.00</p>
 							</div>
@@ -324,8 +324,8 @@
 								<a href="#"><img src="static/images/index/list03.png" /></a>
 								<p>NEX全面屏6GB + 128GB-星钻黑</p>
 								<ul>
-									<a href="#"></a>
-									<a href="#"></a>
+									<a href="#" style="background: #0c0c0c;"></a>
+									<a href="#" style="background: red;"></a>
 								</ul>
 								<p>￥3498.00</p>
 							</div>
@@ -447,22 +447,74 @@
 					</div>
 				<div class="top">
 					<b>精品配件</b>
-					<a href="#">充电</a>
-					<a href="#">配件</a>
-					<a href="#">音乐</a>
-					<a href="#">更多<i class="iconfont icon-k-yjt"></i></a>
+					<div class="left" style="float: right;">
+						<a href="#">充电</a>
+						<a href="#" style="margin: 0 10px;">配件</a>
+						<a href="#">音乐</a>
+						<a href="#">更多<i class="iconfont icon-k-yjt"></i></a>
+					</div>
 				</div>	
 				<div class="third_list">
 					<div class="third">
 						<div class="first_box clearfix">
 							<div class="before">
-								<a href="#"><img src="static/images/index/list10.png" /></a>
+								<a href="#"><img src="static/images/index/third_01.png" /></a>
+								<p>原装闪充充电器-白色</p>
+								<p>支持双引擎闪充</p>
+								<p>￥79.00</p>
+							</div>
+							<div class="later">
+								<a href="#"><img src="static/images/index/third_01.png" /></a>
+								<p>原装闪充充电器-白色</p>
+								<ul>
+									<a href="#" style="background: #FFFFFF;"></a>
+								</ul>
+								<p>￥79.00</p>
+							</div>
+						</div>
+						<div class="first_box clearfix">
+							<div class="before">
+								<a href="#"><img src="static/images/index/third_02.png" /></a>
+								<p>原装闪充数据线-灰白色</p>
+								<p>全新闪充|高速传输</p>
+								<p>￥19.00</p>
+							</div>
+							<div class="later">
+								<a href="#"><img src="static/images/index/third_02.png" /></a>
+								<p>原装闪充数据线-灰白色</p>
+								<ul>
+									<a href="#" style="background: #DDDDDD;"></a>
+								</ul>
+								<p>￥19.00</p>
+							</div>
+						</div>
+						<div class="first_box clearfix">
+							<div class="before">
+								<a href="#"><img src="static/images/index/third_03.png" /></a>
 								<p>Y83全网通 4GB+32GB-3色可选</p>
 								<p>AI美颜自拍|Jovi人工智能</p>
 								<p>￥990.00</p>
 							</div>
 							<div class="later">
-								<a href="#"><img src="static/images/index/list10.png" /></a>
+								<a href="#"><img src="static/images/index/third_03.png" /></a>
+								<p>Y83全网通 4GB+32GB-极夜黑</p>
+								<ul>
+									<a href="#" style="background: #000000;"></a>
+									<a href="#" style="background: #e5b9b7;"></a>
+									<a href="#" style="background: #D5D5D5;"></a>
+								</ul>
+								<p>￥999.00</p>
+							</div>
+						</div>
+						<div class="first_box clearfix" style="margin-right: 0;">
+							<div class="before">
+								<a href="#"><img src="static/images/index/third_04.png" /></a>
+								<p>Y83全网通 4GB+32GB-3色可选</p>
+								<p>AI美颜自拍|Jovi人工智能</p>
+								<p>￥990.00</p>
+							</div>
+							<div class="later">
+								<a href="#"><img src="static/images/index/third_04.png" /></a>
 								<p>Y83全网通 4GB+32GB-极夜黑</p>
 								<ul>
 									<a href="#" style="background: #000000;"></a>
@@ -474,13 +526,29 @@
 						</div>
 						<div class="first_box clearfix">
 							<div class="before">
-								<a href="#"><img src="static/images/index/list10.png" /></a>
-								<p>Y83全网通 4GB+32GB-3色可选</p>
-								<p>AI美颜自拍|Jovi人工智能</p>
-								<p>￥990.00</p>
+								<a href="#"><img src="static/images/index/third_05.png" /></a>
+								<p>MGE 金属编制数据线-金色</p>
+								<p>耐拉耐用|支持闪充</p>
+								<p>￥29.00</p>
 							</div>
 							<div class="later">
-								<a href="#"><img src="static/images/index/list10.png" /></a>
+								<a href="#"><img src="static/images/index/third_05.png" /></a>
+								<p>MGE 金属编制数据线-金色</p>
+								<ul>
+									<a href="#" style="background: #FAEBD7;"></a>
+								</ul>
+								<p>￥999.00</p>
+							</div>
+						</div>
+						<div class="first_box clearfix">
+							<div class="before">
+								<a href="#"><img src="static/images/index/third_06.png" /></a>
+								<p>飞智Wee拉伸手柄-星耀黑</p>
+								<p>时尚便捷|7天超级续航</p>
+								<p>￥189.00</p>
+							</div>
+							<div class="later">
+								<a href="#"><img src="static/images/index/third_06.png" /></a>
 								<p>Y83全网通 4GB+32GB-极夜黑</p>
 								<ul>
 									<a href="#" style="background: #000000;"></a>
@@ -492,13 +560,13 @@
 						</div>
 						<div class="first_box clearfix">
 							<div class="before">
-								<a href="#"><img src="static/images/index/list10.png" /></a>
+								<a href="#"><img src="static/images/index/third_07.png" /></a>
 								<p>Y83全网通 4GB+32GB-3色可选</p>
 								<p>AI美颜自拍|Jovi人工智能</p>
 								<p>￥990.00</p>
 							</div>
 							<div class="later">
-								<a href="#"><img src="static/images/index/list10.png" /></a>
+								<a href="#"><img src="static/images/index/third_07.png" /></a>
 								<p>Y83全网通 4GB+32GB-极夜黑</p>
 								<ul>
 									<a href="#" style="background: #000000;"></a>
@@ -508,15 +576,15 @@
 								<p>￥999.00</p>
 							</div>
 						</div>
-						<div class="first_box clearfix">
+						<div class="first_box clearfix" style="margin-right: 0;">
 							<div class="before">
-								<a href="#"><img src="static/images/index/list10.png" /></a>
+								<a href="#"><img src="static/images/index/third_08.png" /></a>
 								<p>Y83全网通 4GB+32GB-3色可选</p>
 								<p>AI美颜自拍|Jovi人工智能</p>
 								<p>￥990.00</p>
 							</div>
 							<div class="later">
-								<a href="#"><img src="static/images/index/list10.png" /></a>
+								<a href="#"><img src="static/images/index/third_08.png" /></a>
 								<p>Y83全网通 4GB+32GB-极夜黑</p>
 								<ul>
 									<a href="#" style="background: #000000;"></a>
