--- a/app/common/header.html
+++ b/app/common/header.html
@@ -5,134 +5,133 @@
 	<div class="nav">
 		<ul>
 			<li><a href="#">NEX系列</a></li>
-				<div class="wrap">
-					<div class="box01 circre">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>
-					<div class="box02 circre">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>
-					<div class="box03 circre">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>
-					<div class="box04 circre">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>
+			<div class="wrap">
+				<div class="box01 circre">
+					<span></span>
+					<span></span>
+					<span></span>
 				</div>
+				<div class="box02 circre">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+				<div class="box03 circre">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+				<div class="box04 circre">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+			</div>
 			<div class="bg">
 				<ul class="conmn list1">
-					<li><a href ="#">NEX旗舰版</a></li>
-					<li><a href ="#">NEX $ NEX屏幕指纹版</a></li>
+					<li><a href="#">NEX旗舰版</a></li>
+					<li><a href="#">NEX $ NEX屏幕指纹版</a></li>
 				</ul>
 			</div>
 		</ul>
 		<ul>
 			<li><a href="#">X系列</a></li>
 			<div class="wrap">
-					<div class="box01 circre">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>
-					<div class="box02 circre">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>
-					<div class="box03 circre">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>
-					<div class="box04 circre">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>
+				<div class="box01 circre">
+					<span></span>
+					<span></span>
+					<span></span>
 				</div>
+				<div class="box02 circre">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+				<div class="box03 circre">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+				<div class="box04 circre">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+			</div>
 			<div class="bg">
 				<ul class="conmn list2">
-					<li><a href ="#">X23</a></li>
-					<li><a href ="#">X23幻彩版</a></li>
-					<li><a href ="#">X21 $ X21屏幕指纹版</a</li>
-					<li><a href ="#">X21s</a></li>
-					<li><a href ="#">X23i</a></li>
+					<li><a href="#">X23</a></li>
+					<li><a href="#">X23幻彩版</a></li>
+					<li><a href="#">X21 $ X21屏幕指纹版</a</li> <li><a href="#">X21s</a></li>
+					<li><a href="#">X23i</a></li>
 				</ul>
 			</div>
 		</ul>
 		<ul>
 			<li><a href="#">Z系列</a></li>
 			<div class="wrap">
-					<div class="box01 circre">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>
-					<div class="box02 circre">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>
-					<div class="box03 circre">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>
-					<div class="box04 circre">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>
+				<div class="box01 circre">
+					<span></span>
+					<span></span>
+					<span></span>
 				</div>
+				<div class="box02 circre">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+				<div class="box03 circre">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+				<div class="box04 circre">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+			</div>
 			<div class="bg">
 				<ul class="conmn list3">
-					<li><a href ="#">Z23</a></li>
-					<li><a href ="#">Z23i</a></li>
-					<li><a href ="#">Z1</a></li>
-					<li><a href ="#">Z1青春版</a></li>
-					<li><a href ="#">Z1i</a></li>
+					<li><a href="#">Z23</a></li>
+					<li><a href="#">Z23i</a></li>
+					<li><a href="#">Z1</a></li>
+					<li><a href="#">Z1青春版</a></li>
+					<li><a href="#">Z1i</a></li>
 				</ul>
 			</div>
 		</ul>
 		<ul>
 			<li><a href="#">Y系列</a></li>
 			<div class="wrap">
-					<div class="box01 circre">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>
-					<div class="box02 circre">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>
-					<div class="box03 circre">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>
-					<div class="box04 circre">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>
+				<div class="box01 circre">
+					<span></span>
+					<span></span>
+					<span></span>
 				</div>
+				<div class="box02 circre">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+				<div class="box03 circre">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+				<div class="box04 circre">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+			</div>
 			<div class="bg">
-				<ul class = "conmn list4">
-					<li><a href ="#">Y97</a></li>
-					<li><a href ="#">Y93</a></li>
-					<li><a href ="#">Y83</a></li>
-					<li><a href ="#">Y81s</a></li>
-					<li><a href ="#">Y73</a></li>
+				<ul class="conmn list4">
+					<li><a href="#">Y97</a></li>
+					<li><a href="#">Y93</a></li>
+					<li><a href="#">Y83</a></li>
+					<li><a href="#">Y81s</a></li>
+					<li><a href="#">Y73</a></li>
 				</ul>
 			</div>
 		</ul>
@@ -142,7 +141,7 @@
 			<li><a href="#">体验店</a></li>
 			<li><a href="#">Funtouch OS</a></li>
 			<li><a href="#">服务</a></li>
-			<li><a href="#">社区</a></li>	
+			<li><a href="#">社区</a></li>
 		</ul>
 	</div>
 	<div class="header_left">
@@ -153,7 +152,7 @@
 				<li><a href="#"><i class="iconfont icon-k-gwc"></i>购物车</a></li>
 				<li><a href="#"><i class="iconfont icon-cd"></i>我的订单</a></li>
 				<li><a href="#"><i class="iconfont icon-bb"></i>我的商城</a></li>
-				<li><a href="#"><i class="iconfont icon-k-wm"></i>登录/注册</a></li>
+				<li><a href="login.html"><i class="iconfont icon-k-wm"></i>登录/注册</a></li>
 			</ul>
 		</div>
 	</div>
