添加回到顶部和细节功能

--- a/app/common/footer.html
+++ b/app/common/footer.html
@@ -59,9 +59,24 @@
 	<div class="footer-left">
 		<a href="#"><img src="static/images/login/active.png" />在线客服</a>
 		<p>400-678-9688</p>
-		<span>24显示全国服务热线</span>
+		<span>24小时全国服务热线</span>
 	</div>
 	<div class="footer-copyright">
-		Copyright ©2011-2018 广东步步高电子工业有限公司 版权所有 保留一切权利 | 隐私政策 | 法律声明粤B2-20080267 | 粤ICP备05100288号
+		<div class="copyright">Copyright ©2011-2018 广东步步高电子工业有限公司 版权所有 保留一切权利 | 隐私政策 | 法律声明粤B2-20080267 | 粤ICP备05100288号</div>
+		<div class="footer_icon">
+			<div class="icon_left">
+				<ul>
+					<li><i></i>微博</li>
+					<li><i></i>微信
+						<!--<span><img src="../static/images/index/weixin.jpg" /></span>-->
+					</li>
+					<li><i></i>支付宝
+						<!--<span><img src="../static/images/index/zhifubao.jpg" /></span>-->
+					</li>
+				</ul>
+				关注vivo&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;|
+			</div>
+			<div class="icon_right">中国</div>
+		</div>
 	</div>
 </div>
