particulars.json||particulars.js

--- a/app/login.html
+++ b/app/login.html
@@ -23,6 +23,9 @@
 					<input type="text" class="form-control" id="tel" name="tel" placeholder="请输入手机号" data-error="请输入正确的手机号">
 					<p class=""></p>
 					<span id="change" class='' style="display: block;"></span>
+					<!-- <a href="http://localhost/githhub534241247/app/register.html"
+						 id="denglu_a" class='' style="display : block;"></a> -->
+					<!-- <a href="http://localhost/githhub534241247/app/register.html" class=""></a> -->
 					<button class="codebtn">获取验证码</button>
 				</div>
 				<div class="form-group has-success">
