--- a/app/particulars.html
+++ b/app/particulars.html
@@ -1,178 +1,199 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-		<link rel="stylesheet" type="text/css" href="static/css/reset.css"/>
-		<link rel="stylesheet" type="text/css" href="static/css/iconfont.css"/>
-		<link rel="stylesheet" type="text/css" href="static/css/commn.css"/>
-		<link rel="stylesheet" type="text/css" href="static/css/particulars.css"/>
-	</head>
-	<body>
-		<div class="header_wrapper">
-			<script>
-				$('.header_wrapper').load("common/header.html");
-			</script>
+
+<head>
+	<meta charset="UTF-8">
+	<title></title>
+	<link rel="stylesheet" type="text/css" href="static/css/reset.css" />
+	<link rel="stylesheet" type="text/css" href="static/css/iconfont.css" />
+	<link rel="stylesheet" type="text/css" href="static/css/commn.css" />
+	<link rel="stylesheet" type="text/css" href="static/css/particulars.css" />
+</head>
+
+<body>
+
+	<div class="header_wrapper">
+
+	</div>
+	<div class="shop content">
+		<div class="shop_top">
+			<a href="#">商城首页 <i class="iconfont icon-k-yjt"></i></a>
+			<a href="#">智能手机<i class="iconfont icon-k-yjt"></i></a>
+			<a href="#" style="color: #BBBBBB;">NEX</a>
 		</div>
-		<div class="shop content">
-			<div class="shop_top">
-				<a href="#">商城首页 <i class="iconfont icon-k-yjt"></i></a>
-				<a href="#">智能手机<i class="iconfont icon-k-yjt"></i></a>
-				<a href="#" style="color: #BBBBBB;">NEX</a>
+		<div class="shop_main">
+			<div class="shop_left">
+				<!-- <ul class="f_left">
+					<li class="active"><img src="static/images/particulars/left_big01.png" /></li>
+					<li><img src="static/images/particulars/left_big02.png" /></li>
+					<li><img src="static/images/particulars/left_big03.png" /></li>
+					<li><img src="static/images/particulars/left_big04.png" /></li>
+					<li><img src="static/images/particulars/left_big05.png" /></li>
+					<div class="_xuan"></div>
+				</ul> -->
+				<!-- <ul class="f_right">
+					<li class="_datu"><img src="static/images/particulars/left_big01.png" /></li>
+					<li><img src="static/images/particulars/left_big02.png" /></li>
+					<li><img src="static/images/particulars/left_big03.png" /></li>
+					<li><img src="static/images/particulars/left_big04.png" /></li>
+					<li><img src="static/images/particulars/left_big05.png" /></li>
+				</ul>
+				<div class="ol_list">
+					<ol>
+						<li class="_xiaotu"><img src="static/images/particulars/left_mini01.png" /></li>
+						<li><img src="static/images/particulars/left_mini02.png" /></li>
+						<li><img src="static/images/particulars/left_mini03.png" /></li>
+						<li><img src="static/images/particulars/left_mini04.png" /></li>
+						<li><img src="static/images/particulars/left_mini05.png" /></li>
+					</ol> -->
+
+				<button class="right"><i></i></button>
+				<button class="left"><i></i></button>
 			</div>
-			<div class="shop_main">
-				<div class="shop_left">
-					<ul>
-						<li class="active"><img src="static/images/particulars/left_big01.png" /></li>
-						<li><img src="static/images/particulars/left_big02.png" /></li>
-						<li><img src="static/images/particulars/left_big03.png" /></li>
-						<li><img src="static/images/particulars/left_big04.png" /></li>
-						<li><img src="static/images/particulars/left_big05.png" /></li>
-					</ul>
-					<div class="ol_list">
-						<ol>
-							<li><img src="static/images/particulars/left_mini01.png" /></li>
-							<li><img src="static/images/particulars/left_mini02.png" /></li>
-							<li><img src="static/images/particulars/left_mini03.png" /></li>
-							<li><img src="static/images/particulars/left_mini04.png" /></li>
-							<li><img src="static/images/particulars/left_mini05.png" /></li>
-						</ol>
+			<div class="shop_right">
+				<div class="right_main">
+					<div class="right_top">
+						<h1 style="font-size: 30px; line-height: 40px;">NEX旗舰版8GB+128GB 星钻黑</h1>
+						<p><span style="color: #F51919; font-size: 14px;">【享12期免息】</span>
+							高通骁龙845处理器，新一代零界全面屏，屏幕指纹解锁，屏幕发声科技，8G超大运存，Jovi语音助手</p>
 					</div>
-					<button class="right"><i></i></button>
-					<button class="left"><i></i></button>
-				</div>
-				<div class="shop_right">
-					<div class="right_main">
-						<div class="right_top">
-							<h1 style="font-size: 30px; line-height: 40px;">NEX旗舰版8GB+128GB 星钻黑</h1>
-							<p><span style="color: #F51919; font-size: 14px;">【享12期免息】</span> 高通骁龙845处理器，新一代零界全面屏，屏幕指纹解锁，屏幕发声科技，8G超大运存，Jovi语音助手</p>
+					<div class="right_price">
+						<div class="price">
+							<span style="color: #E60012; font-size: 36px; display: block; margin-top: 35px;">¥4298</span>
+							<span style="color: #969696; font-size: 14px;">¥4498</span>
 						</div>
-						<div class="right_price">
-							<div class="price">
-								<span style="color: #E60012; font-size: 36px; display: block; margin-top: 35px;">¥4298</span>
-								<span style="color: #969696; font-size: 14px;">¥4498</span>
-							</div>
-							<ul class="ticket" style="width: 60%;">
-								<li><span>领券</span><b>订单满500减20</b><a href="#">立即领取 ></a></li>
-								<li><span>定制</span>免费的镭射镌刻服务</li>
-								<li><span>积分</span>购买即送4298积分</li>
-								<li style="position: relative;"><span>赠品</span><img src="static/images/particulars/ticket01.png" style="width: 50px; height: 50px; padding-left: 50px;"/> </li>
-							</ul>
-						</div>
-						<div class="right_versions">
-							<div class="versions_top">商品支持：
-								<span><i></i>花呗分期
-									<div class="intro_border">
-										<div class="intro">
-											<i></i>花呗分期
-											<p>商品支持花呗分期</p>
-										</div>
-									</div>
-								</span>
-								<span><i></i>以旧换新
-									<div class="intro_border">
-										<div class="intro">
-											<i></i>可以使用换新鼓励金
-											<p style="line-height: 30px;">换新鼓励金通过参加以旧换新回收旧手机以后获得，旧手机享受额外补贴 <a href="#" style="color: #14ADDF; margin-left: 25px">现在换机 ></a></p>
-										</div>
-									</div>
-								</span>
-							</div>
-							<ul class="versions" style="margin-top: 30px;">
-								<p>版本</p>
-								<li>全网通6G + 128G版本</li>
-								<li>全网通8G + 256G旗舰版</li>
-								<li>全网通8G + 128G旗舰版</li>
-							</ul>
-							<ul class="versions color">
-								<p>颜色</p>
-								<li><span style="background: #ff0000;"></span>宝石红</li>
-								<li><span style="background: #000000;"></span>星耀黑</li>
-								<li><span style="background: #a30d99;"></span>星际版</li>
-							</ul>
-							<ul class="versions combo">
-								<p>选择套餐</p>
-								<li style="font-size: 18px; line-height: 80px;">官方标配</li>
-								<li>乐心手环套餐
-									<p>¥4467<i>省¥30</i></p>
-								</li>
-								<li>游戏鼠标套餐
-									<p>¥4657<i>省¥40</i></p>
-								</li>
-								<li>游戏手柄套餐
-									<p>¥4447<i>省¥40</i></p>
-								</li>
-							</ul>
-							<ul class="versions serve">
-								<p>手机服务(可选)<a href="javascript:;" style="text-decoration: underline; margin-left: 5px;">详情</a></p>
-								<li>一年碎屏保-159元
-									<input type="checkbox" id="color-input-red" class="chat-button-location-radio-input"/>
-									<label for="color-input-red"></label>
-								</li>
-								<li>半年延保-69元
-									<input type="checkbox" id="color-input-red" class="chat-button-location-radio-input"/>
-									<label for="color-input-red"></label>
-								</li>
-								<li>一年延保-109元
-									<input type="checkbox" id="color-input-red" class="chat-button-location-radio-input"/>
-									<label for="color-input-red"></label>
-								</li>
-								<input type="radio" /><span style="font-size: 14px; margin: 0 5px;">我已阅读并同意</span><a href="#" style="font-size: 14px; text-decoration: underline;">《vivo服务条款》</a>
-							</ul>
-							<ul class="versions engrave" style="height: 140px;">
-								<p>镭射镌刻服务<a href="#" style="font-size: 12px; margin-left: 20px;">服务介绍</a></p>
-								<li style="width: 100%;"><i class="iconfont icon-k-fx" style="margin-right: 10px; font-size: 20px;"></i>添加免费的镭射镌刻服务</li>
-							</ul>
-							<ul class="versions amount" style="height: 170px; position: relative;">
-								<p>数量</p>
-								<li style="width: 80px; border:0; margin-left: 76px;"><input type="text" value="1"/>
-									<span style="width: 200px; height: 40px; line-height: 40px; float: left;">（限量五部）</span>
-								</li>
-								<button class="amount_left">-</button>
-								<button class="amount_right">+</button>
-							</ul>
-							<ul class="versions payment" style="height: 240px;">
-								<p>支持分期付款</p>
-								<li>¥1432.66 x 3期（无息）</li>
-								<li>¥716.3 x 6期（无息）</li>
-								<li>¥358.16 x 12期（无息）</li>
-							</ul>
-						</div>
-						<ul class="submit">
-							<li style="background: #FF7800;"><a href="javascript:;">加入购物车</a></li>
-							<li style="background: #F51919;"><a href="javascript:;">立即购买</a></li>
+						<ul class="ticket" style="width: 60%;">
+							<li><span>领券</span><b>订单满500减20</b><a href="#">立即领取 ></a></li>
+							<li><span>定制</span>免费的镭射镌刻服务</li>
+							<li><span>积分</span>购买即送4298积分</li>
+							<li style="position: relative;"><span>赠品</span><img src="static/images/particulars/ticket01.png" style="width: 50px; height: 50px; padding-left: 50px;" />
+							</li>
 						</ul>
 					</div>
+					<div class="right_versions">
+						<div class="versions_top">商品支持：
+							<span><i></i>花呗分期
+								<div class="intro_border">
+									<div class="intro">
+										<i></i>花呗分期
+										<p>商品支持花呗分期</p>
+									</div>
+								</div>
+							</span>
+							<span><i></i>以旧换新
+								<div class="intro_border">
+									<div class="intro">
+										<i></i>可以使用换新鼓励金
+										<p style="line-height: 30px;">换新鼓励金通过参加以旧换新回收旧手机以后获得，旧手机享受额外补贴 <a href="#" style="color: #14ADDF; margin-left: 25px">现在换机
+												></a></p>
+									</div>
+								</div>
+							</span>
+						</div>
+						<ul class="versions" style="margin-top: 30px;">
+							<p>版本</p>
+							<li>全网通6G + 128G版本</li>
+							<li>全网通8G + 256G旗舰版</li>
+							<li>全网通8G + 128G旗舰版</li>
+						</ul>
+						<ul class="versions color">
+							<p>颜色</p>
+							<li><span style="background: #ff0000;"></span>宝石红</li>
+							<li><span style="background: #000000;"></span>星耀黑</li>
+							<li><span style="background: #a30d99;"></span>星际版</li>
+						</ul>
+						<ul class="versions combo">
+							<p>选择套餐</p>
+							<li style="font-size: 18px; line-height: 80px;">官方标配</li>
+							<li>乐心手环套餐
+								<p>¥4467<i>省¥30</i></p>
+							</li>
+							<li>游戏鼠标套餐
+								<p>¥4657<i>省¥40</i></p>
+							</li>
+							<li>游戏手柄套餐
+								<p>¥4447<i>省¥40</i></p>
+							</li>
+						</ul>
+						<ul class="versions serve">
+							<p>手机服务(可选)<a href="javascript:;" style="text-decoration: underline; margin-left: 5px;">详情</a></p>
+							<li>一年碎屏保-159元
+								<input type="checkbox" id="color-input-red" class="chat-button-location-radio-input" />
+								<label for="color-input-red"></label>
+							</li>
+							<li>半年延保-69元
+								<input type="checkbox" id="color-input-red" class="chat-button-location-radio-input" />
+								<label for="color-input-red"></label>
+							</li>
+							<li>一年延保-109元
+								<input type="checkbox" id="color-input-red" class="chat-button-location-radio-input" />
+								<label for="color-input-red"></label>
+							</li>
+							<input type="radio" /><span style="font-size: 14px; margin: 0 5px;">我已阅读并同意</span><a href="#" style="font-size: 14px; text-decoration: underline;">《vivo服务条款》</a>
+						</ul>
+						<ul class="versions engrave" style="height: 140px;">
+							<p>镭射镌刻服务<a href="#" style="font-size: 12px; margin-left: 20px;">服务介绍</a></p>
+							<li style="width: 100%;"><i class="iconfont icon-k-fx" style="margin-right: 10px; font-size: 20px;"></i>添加免费的镭射镌刻服务</li>
+						</ul>
+						<ul class="versions amount" style="height: 170px; position: relative;">
+							<p>数量</p>
+							<li style="width: 80px; border:0; margin-left: 76px;"><input type="text" value="1" />
+								<span style="width: 200px; height: 40px; line-height: 40px; float: left;">（限量五部）</span>
+							</li>
+							<button class="amount_left">-</button>
+							<button class="amount_right">+</button>
+						</ul>
+						<ul class="versions payment" style="height: 240px;">
+							<p>支持分期付款</p>
+							<li>¥1432.66 x 3期（无息）</li>
+							<li>¥716.3 x 6期（无息）</li>
+							<li>¥358.16 x 12期（无息）</li>
+						</ul>
+					</div>
+					<ul class="submit">
+						<li style="background: #FF7800;"><a href="javascript:;">加入购物车</a></li>
+						<li style="background: #F51919;"><a href="javascript:;">立即购买</a></li>
+					</ul>
 				</div>
 			</div>
 		</div>
-		<div class="main_wrapper">
-			<div class="main">
-				<ul class="main_top content">
-					<li><a href="#">详细信息</a></li>
-					<li><a href="#">包装及规格参数</a></li>
-					<li><a href="#">评价 (8871)</a></li>
-					<li><a href="#">评测</a></li>
-					<li><a href="#">售后服务</a></li>
+	</div>
+	<div class="main_wrapper">
+		<div class="main">
+			<ul class="main_top content">
+				<li><a href="#">详细信息</a></li>
+				<li><a href="#">包装及规格参数</a></li>
+				<li><a href="#">评价 (8871)</a></li>
+				<li><a href="#">评测</a></li>
+				<li><a href="#">售后服务</a></li>
+			</ul>
+			<ul class="abstract">
+				<li><img src="static/images/particulars/abstract01.jpg" /></li>
+				<ul class="present content">
+					<li><img src="static/images/particulars/abstract02.jpg" /></li>
+					<li><img src="static/images/particulars/abstract03.jpg" /></li>
+					<li><img src="static/images/particulars/abstract04.jpg" /></li>
+					<li><img src="static/images/particulars/abstract05.jpg" /></li>
 				</ul>
-				<ul class="abstract">
-					<li><img src="static/images/particulars/abstract01.jpg" /></li>
-					<ul class="present content">
-						<li><img src="static/images/particulars/abstract02.jpg" /></li>
-						<li><img src="static/images/particulars/abstract03.jpg" /></li>	
-						<li><img src="static/images/particulars/abstract04.jpg" /></li>
-						<li><img src="static/images/particulars/abstract05.jpg" /></li>
-					</ul>
-					<li><img src="static/images/particulars/abstract06.jpg" /></li>
-					<li><img src="static/images/particulars/abstract07.jpg" /></li>
-					<li><img src="static/images/particulars/abstract08.jpg" /></li>
-				</ul>
-			</div>
+				<li><img src="static/images/particulars/abstract06.jpg" /></li>
+				<li><img src="static/images/particulars/abstract07.jpg" /></li>
+				<li><img src="static/images/particulars/abstract08.jpg" /></li>
+			</ul>
 		</div>
-		<footer class="footer_wrapper">
-			<script>
-				$('.footer_wrapper').load("common/footer.html");				
-			</script>
-		</footer>
-	</body>
+	</div>
+	<footer class="footer_wrapper">
+
+	</footer>
+</body>
+
 </html>
+<script src="static/js/jquery.js"></script>
+<script src="static/js/Ajax.js"></script>
+<script src="static/js/particulars.js"></script>
+<script src="static/js/part.js"></script>
+
+<script>
+	$('.header_wrapper').load("common/header.html");
+	$('.footer_wrapper').load("common/footer.html");
+	img_xr.init();
+</script>
