--- a/app/register.html
+++ b/app/register.html
@@ -15,7 +15,7 @@
 		<div class="register">
 			<a href="#"><img src="static/register/logo.png" /></a>
 			<div class="box">
-				<form action="localhost:8888/server/php/register.php" method="get" autocomplete="on">
+				<form action="http://localhost/githhub534241247/server/php/register.php" method="post" autocomplete="on">
 					<span class="top">账号登录</span>
 					<div class="form-group has-success code">
 						<label for="username"></label>
@@ -51,3 +51,52 @@
 </body>
 
 </html>
+<script src="static/js/jquery.js"> </script>
+<script src="static/js/cookie.js"></script>
+
+<script>
+	$btn = $(".send");
+	// // console.log($btn);
+	$inp = $("#username");
+	// $btn.onclick = function () {
+	// 	var key = $inp;
+	// 	console.log(key);
+	// 	var value = $inp.value;
+	// 	cookie.setItem(key, value, 1);
+	// }
+	$btn.onclick = function () {
+		ajax({
+			method: "post",
+			url: "http://localhost/githhub534241247/server/php/register.php",
+			data: {
+				tel: this.value
+			},
+			success: function (res) {
+				if (res == "1") {
+					var key = $inp;
+					var value = $inp.value;
+					cookie.setItem(key, value, 1);
+					// $span.className = 'text-danger bg-danger';
+					// $adl.className = "text-danger bg-danger";
+					// $span.innerHTML = `
+					// 账号已存在！请直接
+					// <a href="http://localhost/githhub534241247/app/register.html"
+					// >登陆</a>
+					// !
+					// `;
+					// $span.innerHTML = '账号已存在！请直接' + "<a src='http://localhost/githhub534241247/app/register.html'>登录!</a>";
+
+				} else {
+					// $span.className = 'text-success';
+					// $span.innerHTML = '';
+				}
+			}
+		})
+	}
+
+
+
+
+
+
+</script>
