--- a/app/register.html
+++ b/app/register.html
@@ -72,20 +72,11 @@
 				tel: this.value
 			},
 			success: function (res) {
+				console.log(res);
 				if (res == "1") {
 					var key = $inp;
 					var value = $inp.value;
 					cookie.setItem(key, value, 1);
-					// $span.className = 'text-danger bg-danger';
-					// $adl.className = "text-danger bg-danger";
-					// $span.innerHTML = `
-					// 账号已存在！请直接
-					// <a href="http://localhost/githhub534241247/app/register.html"
-					// >登陆</a>
-					// !
-					// `;
-					// $span.innerHTML = '账号已存在！请直接' + "<a src='http://localhost/githhub534241247/app/register.html'>登录!</a>";
-
 				} else {
 					// $span.className = 'text-success';
 					// $span.innerHTML = '';
