--- a/app/particulars.html
+++ b/app/particulars.html
@@ -190,6 +190,7 @@
 <script src="static/js/jquery.js"></script>
 <script src="static/js/Ajax.js"></script>
 <script src="static/js/particulars.js"></script>
+<script src="static/js/shop.js"></script>
 <script src="static/js/part.js"></script>
 
 <script>
